Fixing overlapping login/signup buttons in post detail view

--- a/blog_app/static/css/buttons.css
+++ b/blog_app/static/css/buttons.css
@@ -70,12 +70,17 @@
   background-color: #006f0d;
   cursor: pointer;
 }
+.auth-buttons {
+  display: flex;
+  justify-content: center;
+}
 
 @media screen and (max-width: 700px) {
   .auth-buttons {
     padding: 0;
     display: flex;
     flex-direction: column;
+    align-content: center;
     margin-left: 1rem;
   }
   .main-button {
@@ -94,7 +99,6 @@
 
 /* Banner */
 .banner {
-  display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #ffff25b4;
